Fix missing rootFromOut

--- a/code/python/Calibration/scRipts/Summ-notebook.html
+++ b/code/python/Calibration/scRipts/Summ-notebook.html
@@ -168,7 +168,7 @@ pre code {
 
 <h1 class="title toc-ignore">Distribution of Income, Wealth, and Mortgage during Retirement in SCF</h1>
 <h4 class="author">Alan Lujan</h4>
-<h4 class="date">6/14/2021</h4>
+<h4 class="date">2021-06-14</h4>
 
 </div>
 
